# rinha-2026

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.api-go  Dockerfile.lb  Dockerfile.lb-go  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  haproxy.cfg  package-lock.json  package.json  test-knn.mjs  tsconfig.json
bench/: k6.js
cmd/api/: main.go
cmd/check/: main.go
cmd/lb/: main.go
core/: Cargo.toml  index.ts  rinha_knn.h
core-lb/: Cargo.toml
core-lb/src/: main.rs
core/src/: build_ivf.rs  data.rs  knn.rs  lib.rs
docs/: SUBMISSION.md  architecture.md  blog-post.md  competitive-intel.md  stack-choice.md
go/: go.mod
internal/knn/: knn.go  knn_test.go
internal/rawhttp/: server.go
internal/vec/: vec.go
node/: package.json
scripts/: bench.sh  participant.json  sync-submission.sh
src/: api.ts  build-index.ts  heap.ts  parseJson.ts  quantize.ts  responses.ts  vector.ts  vptree.ts
src/test/: find-fp.ts  parser-equiv.ts  smoke.ts  verify-detection.ts  verify-rust.ts
